Endpoint para show, terminado