@@ -51,6 +51,7 @@ tasks.withType<KotlinCompile> {
 
 tasks.withType<Test> {
 	useJUnitPlatform()
+	jvmArgs("-Xshare:off","-XX:+EnableDynamicAgentLoading")
 }
 
 tasks.test {
